[gd_scene load_steps=19 format=3 uid="uid://cv7w5nec53ssp"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/splash.tscn" id="2"]
[ext_resource type="Shader" path="res://asset/shader/dither.gdshader" id="3"]
[ext_resource type="Shader" path="res://asset/shader/ntsc.gdshader" id="4"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="5"]
[ext_resource type="PackedScene" path="res://scenes/prefab/player.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/ui.tscn" id="7"]
[ext_resource type="Script" path="res://scripts/fade.gd" id="8"]
[ext_resource type="Shader" path="res://asset/shader/circle_fade.gdshader" id="9"]
[ext_resource type="AudioStream" uid="uid://dx84oyybr36tg" path="res://audio/sfx/whistle_down.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://bqf1pp57dtu7u" path="res://audio/sfx/whistle_up.wav" id="11"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("3")
shader_parameter/SCREEN_WIDTH = 640.0
shader_parameter/COLOR_FACTOR = 24.0
shader_parameter/DITHERING_STRENTH = 0.003

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("4")
shader_parameter/SCREEN_SIZE = Vector2(640, 480)

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_fade/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0705882, 0.0509804, 0.0784314, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("circle_fade/bg:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("circle_fade/bg:material:shader_parameter/circle_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="4"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_fade/fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0705882, 0.0509804, 0.0784314, 1), Color(0.0705882, 0.0509804, 0.0784314, 0)]
}

[sub_resource type="Animation" id="5"]
resource_name = "fade_circle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("circle_fade/bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("circle_fade/bg:material:shader_parameter/circle_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(4, 0.5),
"update": 0,
"values": [0.0, 1.05]
}

[sub_resource type="AnimationLibrary" id="6"]
_data = {
"RESET": SubResource("3"),
"fade": SubResource("4"),
"fade_circle": SubResource("5")
}

[sub_resource type="ShaderMaterial" id="7"]
shader = ExtResource("9")
shader_parameter/circle_size = 0.0
shader_parameter/SCREEN_SIZE = Vector2(640, 480)

[node name="root" type="Node"]
script = ExtResource("1")
target_scene = ExtResource("2")

[node name="effect" type="CanvasLayer" parent="."]
layer = 128

[node name="scaling" type="Control" parent="effect"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="dither_buffer" type="BackBufferCopy" parent="effect/scaling"]
position = Vector2(320, 240)
scale = Vector2(3.2, 2.4)
copy_mode = 2

[node name="color_rect" type="ColorRect" parent="effect/scaling/dither_buffer"]
material = SubResource("1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="ntsc_buffer" type="BackBufferCopy" parent="effect/scaling"]
position = Vector2(320, 240)
scale = Vector2(3.2, 2.395)
copy_mode = 2

[node name="color_rect" type="ColorRect" parent="effect/scaling/ntsc_buffer"]
material = SubResource("2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="level_manager" type="Node" parent="." groups=["LevelManager"]]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("5")
scene_player = ExtResource("6")
scene_ui = ExtResource("7")

[node name="fade" type="CanvasLayer" parent="level_manager"]
process_mode = 3
layer = 127
script = ExtResource("8")

[node name="anim" type="AnimationPlayer" parent="level_manager/fade"]
libraries = {
"": SubResource("6")
}

[node name="color_fade" type="Node" parent="level_manager/fade"]

[node name="fade" type="ColorRect" parent="level_manager/fade/color_fade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0705882, 0.0509804, 0.0784314, 0)

[node name="circle_fade" type="Node" parent="level_manager/fade"]

[node name="bg" type="ColorRect" parent="level_manager/fade/circle_fade"]
visible = false
material = SubResource("7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="circle_in" type="AudioStreamPlayer" parent="level_manager/fade/circle_fade"]
stream = ExtResource("10")
pitch_scale = 0.9
bus = &"SoundIndoors"

[node name="circle_out" type="AudioStreamPlayer" parent="level_manager/fade/circle_fade"]
stream = ExtResource("11")
pitch_scale = 0.9
bus = &"SoundIndoors"
